# haskell-of-code

./: .gitignore  CHANGELOG.md  README.md  haskell-of-code.cabal
app/: Main.hs  Solutions.hs
src/: Parsers.hs  Solutions.hs  Solver.hs  Types.hs  solve_day_4.c
