cabal-version:      2.4
name:               haskell-of-code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: advent of code, in haskell

-- The license under which the package is released.
-- license:
author:             Ji Krochmal
maintainer:         ji.krochmal@gmail.com

-- A copyright notice.
-- copyright: author
extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-of-code
    main-is:          Main.hs
    c-sources:        src/solve_day_4.c
    extra-libraries:  ssl crypto
    other-modules:    Solutions

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      split == 0.2.4,
                      containers == 0.6.7,
                      regex-pcre == 0.95.0.0,
                      array == 0.5.4.0,
                      parsec == 3.1.16.1

    hs-source-dirs:   app, src
    default-language: Haskell2010
